# raylib-snakegame

./: CMakeLists.txt
src/: main.c
